--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.github.getActivity:XXPermissions:18.6'
+    implementation 'com.github.Hitomis.transferee:Transferee:1.6.1'
+    implementation 'com.github.Hitomis.transferee:GlideImageLoader:1.6.1'
+
 }
