--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.github.getActivity:XXPermissions:18.6'
-    implementation 'com.github.Hitomis.transferee:Transferee:1.6.1'
-    implementation 'com.github.Hitomis.transferee:GlideImageLoader:1.6.1'
-
+    implementation("com.github.bumptech.glide:recyclerview-integration:4.16.0") {
+        // Excludes the support library because it's already included by Glide.
+        transitive = false
+    }
 }
